# advent-of-code-2024

./: pyproject.toml  pytest.ini
src/advent_of_code_2024/: console.py
src/advent_of_code_2024/days/day01/: solution.py
src/advent_of_code_2024/days/day02/: solution.py
src/advent_of_code_2024/days/day03/: solution.py
src/advent_of_code_2024/days/day04/: solution.py
src/advent_of_code_2024/days/day05/: solution.py
src/advent_of_code_2024/days/day06/: solution.py
src/advent_of_code_2024/days/day_template/: solution.py  test_day_template.py
src/advent_of_code_2024/utils/: __init__.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py
