[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["advent_of_code_2024"]
omit = ["src/advent_of_code_2024/days/day_template/*"]

[tool.coverage.report]
show_missing = true


[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Geert Litjens", email = "geert.litjens@radboudumc.nl"},
]
license = {text = "MIT"}
requires-python = ">=3.8.1"
dependencies = [
    "click>=8.1.3",
    "requests>=2.28.1",
    "colorama>=0.4.6",
    "numpy>=1.23.5",
    "ipython>=8.12.3",
]
name = "advent-of-code-2024"
version = "0.1.0"
description = "My solutions for the Advent of Code 2024 in Python using modern tooling"
readme = "README.md"
keywords = [
    "advent of code",
]

[project.urls]
homepage = "https://geertlitjens.nl/advent-of-code-2024"
repository = "https://github.com/GeertLitjens/advent-of-code-2024"

[project.scripts]
advent-of-code-2024 = "advent_of_code_2024.console:cli"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "flake8>=6.0.0",
    "coverage[toml]>=6.5.0",
    "pytest-cov>=4.0.0",
    "isort>=5.10.1",
    "flake8-isort>=5.0.3",
    "flake8-black>=0.3.5",
    "flake8-bugbear>=22.10.27",
    "flake8-bandit>=4.1.1",
    "safety>=2.3.3",
    "mypy>=0.991",
    "types-requests>=2.28.11.5",
    "types-colorama>=0.4.15.4",
    "typeguard>=2.13.3",
    "flake8-annotations>=2.9.1",
    "pytest-env<2.0.0,>=1.1.3",
]
